--- a/server/package.json
+++ b/server/package.json
@@ -4,17 +4,18 @@
   "description": "Backend server for Nadanaloga.com",
   "main": "server.js",
   "scripts": {
-    "start": "node server/server.js"
+    "start": "node server.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "connect-mongo": "^5.1.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
-    "mongodb": "^6.18.0",
-    "mongoose": "^8.18.0",
-    "nodemailer": "^6.9.13"
+    "mongoose": "^8.4.1",
+    "nodemailer": "^6.9.13",
+    "serverless-http": "^3.2.0"
   }
 }
