--- a/package.json
+++ b/package.json
@@ -12,12 +12,11 @@
   "dependencies": {
     "@google/genai": "^0.14.0",
     "bcryptjs": "^2.4.3",
-    "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "express-session": "^1.18.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.1",
     "nodemailer": "^6.9.13",
     "react": "^19.1.0",
