Fix Vercel deployment: Remove conflicting builds property and migrate to modern functions-only configuration

--- a/vercel.json
+++ b/vercel.json
@@ -1,47 +1,37 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "server/server.js",
-      "use": "@vercel/node"
-    },
-    {
-      "src": "package.json",
-      "use": "@vercel/static-build",
-      "config": { "distDir": "dist" }
-    }
-  ],
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist",
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "/server/server.js"
+      "dest": "/api/server.js"
     },
     {
       "src": "/(dashboard|admin|register|login).*",
-      "dest": "/dist/index.html"
+      "dest": "/index.html"
     },
     {
       "src": "/static/(.*)",
-      "dest": "/dist/static/$1"
+      "dest": "/static/$1"
     },
     {
       "src": "/assets/(.*)",
-      "dest": "/dist/assets/$1"
+      "dest": "/assets/$1"
     },
     {
       "src": "/(.*\\.(js|css|png|jpg|jpeg|gif|svg|ico|woff|woff2|ttf|eot))",
-      "dest": "/dist/$1"
+      "dest": "/$1"
     },
     {
       "src": "/(.*)",
-      "dest": "/dist/index.html"
+      "dest": "/index.html"
     }
   ],
   "env": {
     "NODE_ENV": "production"
   },
   "functions": {
-    "server/server.js": {
+    "api/server.js": {
       "maxDuration": 60,
       "memory": 1024
     }
