--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,7 @@
 {
-  "rewrites": [
-    {
-      "source": "/api/(.*)",
-      "destination": "/api/index.js"
-    },
-    {
-      "source": "/(.*)",
-      "destination": "/index.html"
+  "functions": {
+    "api/index.js": {
+      "runtime": "@vercel/node@3.0.7"
     }
-  ]
+  }
 }
