--- a/api/package.json
+++ b/api/package.json
@@ -2,6 +2,7 @@
   "name": "nadanaloga-api",
   "version": "1.0.0",
   "description": "API for Nadanaloga portal",
+  "type": "module",
   "main": "index.js",
   "dependencies": {
     "express": "^4.19.2",
